# eagle.py

./: .gitignore  README.md  setup.cfg  setup.py  structure.md
eagle/: __init__.py
eagle/basic/: __init__.py  api_connection.py  cached_property.py
eagle/types/: Application.py  Color.py  Folder.py  Item.py  Library.py  Tag.py  __init__.py
src/: base_class.py
src/objects/: application.py  pallete.py  smart_folder.py  tags.py
