[metadata]
name = eagle
version = attr: src.VERSION
author = Aodaruma
description = A simple and easy to use Python library for the Eagle API
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Aodaruma/eagle-py
license = file: LICENSE

[options]
install_requires =
    requests

